--- a/trading.html
+++ b/trading.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Young Trader Futures Academy: Master ES Futures trading with free tutorials and premium ProTrader insights." />
   <title>Young Trader Futures Academy</title>
   <style>
     :root {
@@ -15,59 +16,266 @@
       --card-bg: #222;
       --footer-bg: #111;
     }
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: var(--dark); color: var(--text); line-height: 1.6; display: flex; flex-direction: column; }
 
-    header { background: rgba(26,26,26,0.95); padding: 1rem 2rem; position: fixed; width: 100%; top: 0; z-index: 100; display: flex; justify-content: space-between; align-items: center; }
-    .logo { color: var(--primary); font-size: 1.5rem; font-weight: bold; text-decoration: none; }
-    nav ul { list-style: none; display: flex; gap: 1.5rem; }
-    nav a { color: var(--text); text-decoration: none; font-weight: 600; transition: color 0.3s ease; }
-    nav a:hover { color: var(--accent); }
-    .nav-toggle { display: none; background: none; border: none; cursor: pointer; }
-    .hamburger, .hamburger::before, .hamburger::after { width: 25px; height: 3px; background: var(--text); display: block; position: relative; }
-    .hamburger::before, .hamburger::after { content: ''; position: absolute; left: 0; }
+    html { scroll-behavior: smooth; }
+    *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: var(--dark);
+      color: var(--text);
+      line-height: 1.6;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    /* Header */
+    header {
+      background: rgba(26,26,26,0.95);
+      padding: 1rem 2rem;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 100;
+      display: flex;
+      align-items: center;
+    }
+    .logo {
+      color: var(--primary);
+      font-size: 1.5rem;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    /* Nav */
+    nav {
+      flex: 1;
+    }
+    .nav-list {
+      list-style: none;
+      display: flex;
+      gap: 1.5rem;
+      justify-content: center;
+    }
+    .nav-list li a {
+      color: var(--text);
+      text-decoration: none;
+      font-weight: 600;
+      transition: color 0.3s ease;
+    }
+    .nav-list li a:hover {
+      color: var(--accent);
+    }
+
+    /* Hamburger toggle */
+    .nav-toggle {
+      display: none;
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+    .hamburger,
+    .hamburger::before,
+    .hamburger::after {
+      width: 25px;
+      height: 3px;
+      background: var(--text);
+      display: block;
+      position: relative;
+      transition: background 0.3s ease;
+    }
+    .hamburger::before,
+    .hamburger::after {
+      content: '';
+      position: absolute;
+      left: 0;
+    }
     .hamburger::before { top: -8px; }
-    .hamburger::after { top: 8px; }
+    .hamburger::after  { top: 8px; }
 
-    .hero { background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('hero-bg.jpg') center/cover no-repeat; height: 80vh; display: flex; align-items: center; justify-content: center; text-align: center; padding: 0 2rem; margin-top: 4rem; }
-    .hero h1 { font-size: 3rem; margin-bottom: 1rem; }
-    .hero p { font-size: 1.2rem; margin-bottom: 2rem; max-width: 600px; }
+    /* Hero */
+    .hero {
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('hero-bg.jpg') center/cover no-repeat;
+      height: 80vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 0 2rem;
+      margin-top: 4rem;
+    }
+    .hero-content {
+      max-width: 800px;
+      color: var(--text);
+    }
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+      max-width: 600px;
+      color: var(--light);
+    }
 
-    section { padding: 4rem 2rem; width: 100%; max-width: 1200px; margin: auto; }
-    h2 { text-align: center; font-size: 2rem; color: var(--primary); margin-bottom: 2rem; }
+    /* Sections */
+    section {
+      padding: 4rem 2rem;
+      width: 100%;
+      max-width: 1200px;
+      margin: auto;
+    }
+    h2 {
+      text-align: center;
+      font-size: 2rem;
+      color: var(--primary);
+      margin-bottom: 2rem;
+    }
 
-    .video-grid, .community-grid, .info-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem; }
-    .video-card, .info-card { background: var(--card-bg); border-radius: 8px; overflow: hidden; box-shadow: 0 4px 10px rgba(0,0,0,0.5); display: flex; flex-direction: column; }
-    .video-card iframe, .video-card img, .info-card img { width: 100%; display: block; }
-    .video-card .info, .info-card .info { padding: 1rem; flex: 1; display: flex; flex-direction: column; justify-content: space-between; }
-    .video-card .info h3, .info-card .info h3 { font-size: 1.1rem; margin-bottom: 0.5rem; }
-    .video-card .info p, .info-card .info p { font-size: 0.9rem; color: var(--muted); margin-bottom: 1rem; }
-    .store-btn, .btn { background: var(--primary); padding: 0.75rem 1rem; color: var(--text); text-decoration: none; border-radius: 5px; font-weight: 600; text-align: center; transition: background 0.3s ease; }
-    .store-btn:hover, .btn:hover { background: var(--accent); }
+    /* Grids & Cards */
+    .video-grid, .community-grid, .info-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2rem;
+    }
+    .video-card, .info-card {
+      background: var(--card-bg);
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+      display: flex;
+      flex-direction: column;
+    }
+    .video-card iframe,
+    .video-card img,
+    .info-card img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    .video-card .info,
+    .info-card .info {
+      padding: 1rem;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+    .video-card .info h3,
+    .info-card .info h3 {
+      font-size: 1.1rem;
+      margin-bottom: 0.5rem;
+    }
+    .video-card .info p,
+    .info-card .info p {
+      font-size: 0.9rem;
+      color: var(--muted);
+      margin-bottom: 1rem;
+    }
 
-    footer { background: var(--footer-bg); color: var(--muted); padding: 2rem; }
-    .footer-container { display: flex; flex-wrap: wrap; justify-content: space-between; max-width: 1200px; margin: auto; gap: 1rem; }
-    .footer-nav, .footer-social { display: flex; gap: 1rem; }
-    .footer-nav a, .footer-social a { color: var(--muted); text-decoration: none; font-size: 0.9rem; }
-    .footer-nav a:hover, .footer-social a:hover { color: var(--text); }
-    .footer-copy { text-align: center; width: 100%; margin-top: 1rem; font-size: 0.8rem; }
+    /* Buttons */
+    .btn {
+      background: var(--primary);
+      padding: 0.75rem 1rem;
+      color: var(--text);
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: 600;
+      text-align: center;
+      transition: background 0.3s ease;
+      display: inline-block;
+    }
+    .btn:hover {
+      background: var(--accent);
+    }
 
+    /* Footer */
+    footer {
+      background: var(--footer-bg);
+      color: var(--muted);
+      padding: 2rem;
+      margin-top: auto;
+    }
+    .footer-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      max-width: 1200px;
+      margin: auto;
+      gap: 1rem;
+    }
+    .footer-nav, .footer-social {
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
+    }
+    .footer-nav a, .footer-social a {
+      color: var(--muted);
+      text-decoration: none;
+      font-size: 0.9rem;
+    }
+    .footer-nav a:hover, .footer-social a:hover {
+      color: var(--text);
+    }
+    .footer-copy {
+      text-align: center;
+      width: 100%;
+      margin-top: 1rem;
+      font-size: 0.8rem;
+    }
+
+    /* Mobile */
     @media (max-width: 768px) {
-      .nav-toggle { display: block; }
-      nav ul { display: none; position: absolute; top: 100%; right: 0; background: var(--dark); flex-direction: column; width: 200px; transform: translateX(100%); transition: transform 0.3s ease; }
-      nav ul.show { transform: translateX(0); }
-      nav ul li { margin: 1rem 0; text-align: center; }
-      .hero h1 { font-size: 2.5rem; }
+      header {
+        justify-content: space-between;
+      }
+      nav {
+        flex: 0 0 auto;
+      }
+      .nav-toggle {
+        display: block;
+        order: 3;
+      }
+      .nav-list {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 100%;
+        right: 0;
+        background: var(--dark);
+        width: 200px;
+        padding: 1rem 0;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+      }
+      .nav-list.show {
+        display: flex;
+      }
+      .nav-list li {
+        margin: 0.5rem 0;
+        text-align: center;
+      }
+      .hero h1 {
+        font-size: 2.5rem;
+      }
     }
   </style>
 </head>
 <body>
+
   <header>
-    <a href="#" class="logo">Futures Academy</a>
-    <button class="nav-toggle" aria-label="toggle navigation"><span class="hamburger"></span></button>
+    <a href="#home" class="logo">Futures Academy</a>
+    <button
+      class="nav-toggle"
+      aria-label="Toggle navigation"
+      aria-controls="nav-list"
+      aria-expanded="false"
+    >
+      <span class="hamburger"></span>
+    </button>
     <nav>
-      <ul class="nav-list">
-        <li><a href="index.html">Home</a></li>
+      <ul id="nav-list" class="nav-list">
+        <li><a href="#home">Home</a></li>
         <li><a href="#free-videos">Free Videos</a></li>
         <li><a href="#premium">Premium</a></li>
         <li><a href="#communities">Communities</a></li>
@@ -93,7 +301,6 @@
           <div class="info">
             <h3>Intro to ES Futures</h3>
             <p>Understand the basics of ES Futures trading.</p>
-            <a href="#" class="store-btn btn">Watch Now</a>
           </div>
         </div>
       </div>
@@ -103,7 +310,6 @@
           <div class="info">
             <h3>Risk Management</h3>
             <p>Learn how to protect your capital effectively.</p>
-            <a href="#" class="store-btn btn">Watch Now</a>
           </div>
         </div>
       </div>
@@ -119,7 +325,7 @@
           <div class="info">
             <h3>Advanced Strategy Breakdown</h3>
             <p>Deep dive into our multi-timeframe entry system.</p>
-            <a href="https://patreon.com/YourPage" class="store-btn">View on Patreon</a>
+            <a href="https://patreon.com/YourPage" class="btn">View on Patreon</a>
           </div>
         </div>
       </div>
@@ -129,46 +335,46 @@
           <div class="info">
             <h3>Live Trade Analysis</h3>
             <p>Watch recorded sessions with expert commentary.</p>
-            <a href="https://patreon.com/YourPage" class="store-btn">View on Patreon</a>
+            <a href="https://patreon.com/YourPage" class="btn">View on Patreon</a>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-<section id="communities">
+  <section id="communities">
     <h2>Join Our Communities</h2>
     <div class="community-grid">
       <div class="info-card">
-        <img src="discord-thumb.jpg" alt="Discord" />
+        <img src="discord-thumb.jpg" alt="Discord Community Thumbnail" />
         <div class="info">
           <h3>Discord</h3>
           <p>Chat live with our community for setups, tips, and support.</p>
-          <a href="https://discord.gg/YourServer" class="btn store-btn">Join Discord</a>
+          <a href="https://discord.gg/YourServer" class="btn">Join Discord</a>
         </div>
       </div>
       <div class="info-card">
-        <img src="patreon-thumb.jpg" alt="Patreon" />
+        <img src="patreon-thumb.jpg" alt="Patreon Community Thumbnail" />
         <div class="info">
           <h3>Patreon</h3>
           <p>Support us and unlock exclusive ProTrader content.</p>
-          <a href="https://patreon.com/YourPage" class="btn store-btn">Visit Patreon</a>
+          <a href="https://patreon.com/YourPage" class="btn">Visit Patreon</a>
         </div>
       </div>
       <div class="info-card">
-        <img src="youtube-thumb.jpg" alt="YouTube" />
+        <img src="youtube-thumb.jpg" alt="YouTube Channel Thumbnail" />
         <div class="info">
           <h3>YouTube</h3>
           <p>Subscribe for our latest free video tutorials and livestreams.</p>
-          <a href="https://youtube.com/YourChannel" class="btn store-btn">Subscribe</a>
+          <a href="https://youtube.com/YourChannel" class="btn">Subscribe</a>
         </div>
       </div>
       <div class="info-card">
-        <img src="twitch-thumb.jpg" alt="Twitch" />
+        <img src="twitch-thumb.jpg" alt="Twitch Stream Thumbnail" />
         <div class="info">
           <h3>Twitch</h3>
           <p>Watch us trade live and ask questions in real-time.</p>
-          <a href="https://twitch.tv/YourChannel" class="btn store-btn">Follow on Twitch</a>
+          <a href="https://twitch.tv/YourChannel" class="btn">Follow on Twitch</a>
         </div>
       </div>
     </div>
@@ -180,8 +386,8 @@
       <div class="info-card">
         <div class="info">
           <h3>Email Support</h3>
-          <p>Drop us a line anytime, we usually respond within 24 hours.</p>
-          <a href="mailto:info@youngtraderfa.com" class="btn store-btn">Email Us</a>
+          <p>Drop us a line anytime; we usually respond within 24 hours.</p>
+          <a href="mailto:info@youngtraderfa.com" class="btn">Email Us</a>
         </div>
       </div>
       <div class="info-card">
@@ -219,8 +425,40 @@
 
   <script>
     const toggle = document.querySelector('.nav-toggle');
-    const menu = document.querySelector('nav ul');
-    toggle.addEventListener('click', () => menu.classList.toggle('show'));
+    const menu   = document.querySelector('#nav-list');
+
+    // init ARIA
+    toggle.setAttribute('aria-expanded', 'false');
+
+    toggle.addEventListener('click', () => {
+      const isOpen = menu.classList.toggle('show');
+      toggle.setAttribute('aria-expanded', isOpen);
+    });
+
+    // close on link click
+    document.querySelectorAll('#nav-list a').forEach(link =>
+      link.addEventListener('click', () => {
+        menu.classList.remove('show');
+        toggle.setAttribute('aria-expanded', 'false');
+      })
+    );
+
+    // close on Escape
+    document.addEventListener('keydown', e => {
+      if (e.key === 'Escape' && menu.classList.contains('show')) {
+        menu.classList.remove('show');
+        toggle.setAttribute('aria-expanded', 'false');
+      }
+    });
+
+    // reset menu on resize
+    window.addEventListener('resize', () => {
+      if (window.innerWidth > 768 && menu.classList.contains('show')) {
+        menu.classList.remove('show');
+        toggle.setAttribute('aria-expanded', 'false');
+      }
+    });
   </script>
+
 </body>
 </html>
