--- a/trading.html
+++ b/trading.html
@@ -275,7 +275,7 @@
     </button>
     <nav>
       <ul id="nav-list" class="nav-list">
-        <li><a href="#home">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#free-videos">Free Videos</a></li>
         <li><a href="#premium">Premium</a></li>
         <li><a href="#communities">Communities</a></li>
