--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="trading.html">YoungTrader</a></li>
         <li><a href="landing.html">YoungDesert</a></li>
         <li><a href="#features">LifeStyle</a></li>
-        <li><a href="#contact">Podcast</a></li>
+        <li><a href="podcast.html">Podcast</a></li>
         <li><a href="#contact">YD</a></li>
       </ul>
     </nav>
