--- a/podcast.html
+++ b/podcast.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="My Podcast: Episodes, interviews and more on all your favorite platforms." />
-  <title>My Podcast</title>
+  <title>YD Podcast</title>
   <style>
     :root {
       --primary: #00a859;
@@ -131,8 +131,8 @@
   <main>
     <!-- Hero -->
     <section id="home" class="hero">
-      <h1>Listen to Our Latest Episode</h1>
-      <p>Available on all major platforms.</p>
+      <h1>Listen the best podcast epidsodes & more!</h1>
+      <p>Let's change our mindset.</p>
       <div class="hero-grid">
         <iframe src="https://open.spotify.com/embed/episode/7caTFq7gfMTXFt5k8OJJpW" allow="encrypted-media"></iframe>
         <iframe src="https://open.spotify.com/embed/show/0wxgxHWSeGqJZrOSjiV5HE" allow="encrypted-media"></iframe>
