--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul class="nav-list" id="nav-list">
         <li><a href="trading.html">YoungTrader</a></li>
         <li><a href="landing.html">YoungDesert</a></li>
-        <li><a href="#features">LifeStyle</a></li>
+        <li><a href="blog.html">LifeStyle</a></li>
         <li><a href="podcast.html">Podcast</a></li>
         <li><a href="#contact">YD</a></li>
       </ul>
