--- a/post1.html
+++ b/post1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Understanding CSS Grid | MyBlog</title>
+  <title>Understanding CSS Grid | MyLifeStyle</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     /* Adjust for fixed header */
@@ -114,7 +114,7 @@
   <!-- Header & Nav -->
   <header class="header">
     <nav class="nav">
-      <a href="index.html" class="logo">MyBlog</a>
+      <a href="index.html" class="logo">MyLifeStyle</a>
       <button class="nav-toggle" id="nav-toggle">
         <span class="hamburger"></span>
       </button>
