--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="landing.html">YoungDesert</a></li>
         <li><a href="blog.html">LifeStyle</a></li>
         <li><a href="podcast.html">Podcast</a></li>
-        <li><a href="#contact">YD</a></li>
+        <li><a href="yd.html">YD</a></li>
       </ul>
     </nav>
   </header>
