--- a/yd.html
+++ b/yd.html
@@ -37,6 +37,7 @@
       <a href="#" class="logo">BlockPOS</a>
       <button class="nav-toggle" id="nav-toggle"><span class="hamburger"></span></button>
       <ul class="nav-list" id="nav-list">
+         <li><a href="index.html">Home</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#gallery">Gallery</a></li>
         <li><a href="#preorder">Pre-Order</a></li>
