--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +11,7 @@
   <header class="header">
     <nav class="nav">
       <a href="#hero" class="logo">YoungDesert</a>
-      <button class="nav-toggle" id="nav-toggle">
+      <button class="nav-toggle" id="nav-toggle" aria-label="Toggle navigation">
         <span class="hamburger"></span>
       </button>
       <ul class="nav-list" id="nav-list">
@@ -28,8 +27,8 @@
   <!-- Hero Section -->
   <section id="hero" class="hero">
     <div class="hero-content">
-      <h1>Welcome to My Personal Project</h1>
-      <p>Building innovative solutions with passion and green spirit.</p>
+      <h1>Welcome to YoungDesert</h1>
+      <p>Building trading strategies solutions with passion and green spirit.</p>
       <a href="#features" class="btn">Explore Features</a>
     </div>
   </section>
@@ -55,17 +54,30 @@
 
   <!-- About Section -->
   <section id="about" class="about">
-    <h2>About the Project</h2>
-    <p>Share your story, goals, and vision.</p>
+    <h2>Why your here?</h2>
+    <p>Share your story, goals, and vision about your trading activities.</p>
   </section>
 
   <!-- Contact Section -->
   <section id="contact" class="contact">
-    <h2>Get in Touch</h2>
-    <form class="contact-form">
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <textarea placeholder="Your Message" rows="4" required></textarea>
+    <h2>Get a Touch</h2>
+    <form id="contact-form" class="contact-form">
+      <!-- Web3Forms configuration -->
+      <input type="hidden" name="access_key" value="3a7e0042-9451-4644-bf29-1d9806ff8254" />
+      <input type="hidden" name="subject" value="New Message from Website" />
+     
+      <!-- Honeypot for spam protection -->
+      <input type="hidden" name="honeypot" value="" />
+
+      <label for="name">Name</label>
+      <input id="name" name="name" type="text" placeholder="Your Name" required />
+
+      <label for="email">Email</label>
+      <input id="email" name="email" type="email" placeholder="Your Email" required />
+
+      <label for="message">Message</label>
+      <textarea id="message" name="message" placeholder="Your Message" rows="4" required></textarea>
+
       <button type="submit" class="btn">Send Message</button>
     </form>
   </section>
