--- a/trading.html
+++ b/trading.html
@@ -264,7 +264,7 @@
 <body>
 
   <header>
-    <a href="#home" class="logo">Futures Academy</a>
+    <a href="#home" class="logo">YoungTrader</a>
     <button
       class="nav-toggle"
       aria-label="Toggle navigation"
