--- a/index.html
+++ b/index.html
@@ -38,16 +38,28 @@
     <h2>Key Features</h2>
     <div class="feature-grid">
       <div class="feature-item">
-        <h3>Feature One</h3>
-        <p>Describe the first feature of your project.</p>
+        <h3>Peer‑Driven Mentorship & Networking</h3>
+        <p>> Tap into real‑time insights from fellow traders of all skill levels.</p>
+
+        <p>> Share ideas, strategies, and trade setups in dedicated channels or live sessions.</p>
+
+        <p>> Build relationships that can lead to collaborative projects, referral opportunities, or even future partnerships.</p>
       </div>
       <div class="feature-item">
-        <h3>Feature Two</h3>
-        <p>Describe the second feature of your project.</p>
+        <h3>Flexibility & Lifestyle Freedom</h3>
+        <p>> Trade whenever and wherever you want—morning coffee, campus break, or late‑night grind.</p>
+
+        <p>> Design your own schedule, balancing studies, side‑hustles, and personal life.</p>
+
+        <p>> Gain financial independence early, funding travel, hobbies, or reinvesting in your goals.</p>
       </div>
       <div class="feature-item">
-        <h3>Feature Three</h3>
-        <p>Describe the third feature of your project.</p>
+        <h3>Accelerated Learning & Skill Mastery</h3>
+        <p>> Access curated educational content: webinars, workshops, and real‑time trade debriefs.</p>
+
+        <p>> Get constructive feedback on your journaling, risk management, and strategy execution.</p>
+
+        <p>> Track your progress with community challenges and leaderboard gamification to keep you motivated.</p>
       </div>
     </div>
   </section>
