--- a/trading.html
+++ b/trading.html
@@ -95,7 +95,7 @@
 
     /* Hero */
     .hero {
-      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('hero-bg.jpg') center/cover no-repeat;
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/10.jpg') center/cover no-repeat;
       height: 80vh;
       display: flex;
       align-items: center;
