--- a/trading.html
+++ b/trading.html
@@ -366,7 +366,7 @@
         <div class="info">
           <h3>YouTube</h3>
           <p>Subscribe for our latest free video tutorials and livestreams.</p>
-          <a href="https://youtube.com/YourChannel" class="btn">Subscribe</a>
+          <a href="https://www.youtube.com/@TheYoungDesert" class="btn">Subscribe</a>
         </div>
       </div>
       <div class="info-card">
