--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="hero-content">
       <h1>Welcome to YoungDesert</h1>
       <p>Building trading strategies solutions with passion and green spirit.</p>
-      <a href="#features" class="btn">Explore Features</a>
+      <a href="#features" class="btn">Learn How I Trade Futures</a>
     </div>
   </section>
 
