--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <section id="hero" class="hero">
     <div class="hero-content">
       <h1>Welcome to YoungDesert</h1>
-      <p>Building trading strategies solutions with passion and green spirit.</p>
+      <p>“Turn Market Chaos into Profit – Learn Smart Futures Trading.”</p>
       <a href="#features" class="btn">Learn How I Trade Futures</a>
     </div>
   </section>
