--- a/trading.html
+++ b/trading.html
@@ -493,7 +493,7 @@
   <h2>Connect with Our Community</h2>
   <div class="community-grid">
     <div class="info-card">
-      <img src="icons8-discord.svg" alt="Discord Community">
+      <img src="icons/icons8-discord.svg" alt="Discord Community">
       <div class="info">
         <h3>Discord</h3>
         <p>Join live discussions for setups, strategies, and real‑time support.</p>
@@ -502,7 +502,7 @@
     </div>
 
     <div class="info-card">
-      <img src="icons8-patreon.svg" alt="Patreon Community">
+      <img src="icons/icons8-patreon.svg" alt="Patreon Community">
       <div class="info">
         <h3>Patreon</h3>
         <p>Support our work and unlock exclusive ProTrader insights.</p>
@@ -511,7 +511,7 @@
     </div>
 
     <div class="info-card">
-      <img src="icons8-youtube.svg" alt="YouTube Channel">
+      <img src="icons/icons8-youtube.svg" alt="YouTube Channel">
       <div class="info">
         <h3>YouTube</h3>
         <p>Subscribe for free tutorials, deep dives, and livestreams.</p>
@@ -520,7 +520,7 @@
     </div>
 
     <div class="info-card">
-      <img src="icons8-twitch.svg" alt="Twitch Stream">
+      <img src="icons/icons8-twitch.svg" alt="Twitch Stream">
       <div class="info">
         <h3>Twitch</h3>
         <p>Watch us trade live—ask questions and learn in real time.</p>
