--- a/index.html
+++ b/index.html
@@ -28,46 +28,17 @@
   <section id="hero" class="hero">
     <div class="hero-content">
       <h1>Welcome to YoungDesert</h1>
-      <p>“Turn Market Chaos into Profit – Learn Smart Futures Trading.”</p>
-      <a href="#features" class="btn">Learn How I Trade Futures</a>
+      <p>“Turn your Chaos into Profit – Learn and Work Smart Ways.”</p>
+      <a href="#about" class="btn">Learn How</a>
     </div>
   </section>
 
-  <!-- Features Section -->
-  <section id="features" class="features">
-    <h2>Key Features</h2>
-    <div class="feature-grid">
-      <div class="feature-item">
-        <h3>Peer‑Driven Mentorship & Networking</h3>
-        <p>> Tap into real‑time insights from fellow traders of all skill levels.</p>
-
-        <p>> Share ideas, strategies, and trade setups in dedicated channels or live sessions.</p>
-
-        <p>> Build relationships that can lead to collaborative projects, referral opportunities, or even future partnerships.</p>
-      </div>
-      <div class="feature-item">
-        <h3>Flexibility & Lifestyle Freedom</h3>
-        <p>> Trade whenever and wherever you want—morning coffee, campus break, or late‑night grind.</p>
-
-        <p>> Design your own schedule, balancing studies, side‑hustles, and personal life.</p>
-
-        <p>> Gain financial independence early, funding travel, hobbies, or reinvesting in your goals.</p>
-      </div>
-      <div class="feature-item">
-        <h3>Accelerated Learning & Skill Mastery</h3>
-        <p>> Access curated educational content: webinars, workshops, and real‑time trade debriefs.</p>
-
-        <p>> Get constructive feedback on your journaling, risk management, and strategy execution.</p>
-
-        <p>> Track your progress with community challenges and leaderboard gamification to keep you motivated.</p>
-      </div>
-    </div>
-  </section>
+ 
 
   <!-- About Section -->
   <section id="about" class="about">
-    <h2>Why your here?</h2>
-    <p>Share your story, goals, and vision about your trading activities.</p>
+    <h2>What bring you over here?</h2>
+    <p>Share your story, goals, and vision about your LifeStyle, Investment and Business.</p>
   </section>
 
   <!-- Contact Section -->
@@ -96,7 +67,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <p>&copy; 2025 My Personal Project. All rights reserved.</p>
+    <p>&copy; 2025 YoungDesert. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
