--- a/trading.html
+++ b/trading.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Young Trader Futures Academy: Master ES Futures trading with free tutorials and premium ProTrader insights." />
   <title>Young Trader Futures Academy</title>
+  <link rel="stylesheet" href="style.css" />
   <style>
     :root {
       --primary: #00a859;
@@ -423,24 +424,26 @@
     <nav>
       <ul id="nav-list" class="nav-list">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#free-videos">Free Videos</a></li>
-        <li><a href="#premium">Premium</a></li>
-        <li><a href="#communities">Communities</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#free-videos">Futures</a></li>
+        <li><a href="#premium">TYD</a></li>
+        <li><a href="#communities">Track Us</a></li>
+        <li><a href="#contact">Meet Us</a></li>
       </ul>
     </nav>
   </header>
 
+  
+
   <section id="home" class="hero">
     <div class="hero-content">
-      <h1>Young Trader Futures Academy</h1>
-      <p>Master ES Futures trading with free tutorials and premium ProTrader insights. Build consistent profitability.</p>
-      <a href="#free-videos" class="btn">Start Learning</a>
+      <h1>Are you Trader?</h1>
+      <p>“Turn Market Chaos into Profit – Learn Smart Futures Trading.”</p>
+      <a href="#free-videos" class="btn">Learn How We Trade Futures</a>
     </div>
   </section>
 
   <section id="free-videos">
-    <h2>Free YouTube Tutorials</h2>
+    <h2>Futures</h2>
     <div class="video-grid">
       <div class="video-card">
         <iframe src="https://www.youtube.com/embed/DIJgms3O_lM" title="Free Tutorial 1" frameborder="0" allowfullscreen></iframe>
@@ -464,7 +467,7 @@
   </section>
 
   <section id="premium">
-    <h2>Premium ProTrader Content</h2>
+    <h2>TheYoungDesert - Exclusive Only </h2>
     <div class="video-grid">
       <div class="video-card">
         <img src="images/07.jpg" alt="Premium Video 1" />
@@ -493,7 +496,7 @@
   <h2>Connect with Our Community</h2>
   <div class="community-grid">
     <div class="info-card">
-      <img src="icons/icons8-discord.svg" alt="Discord Community">
+      <img src="icons8-discord.svg" alt="Discord Community">
       <div class="info">
         <h3>Discord</h3>
         <p>Join live discussions for setups, strategies, and real‑time support.</p>
@@ -502,7 +505,7 @@
     </div>
 
     <div class="info-card">
-      <img src="icons/icons8-patreon.svg" alt="Patreon Community">
+      <img src="icons8-patreon.svg" alt="Patreon Community">
       <div class="info">
         <h3>Patreon</h3>
         <p>Support our work and unlock exclusive ProTrader insights.</p>
@@ -511,7 +514,7 @@
     </div>
 
     <div class="info-card">
-      <img src="icons/icons8-youtube.svg" alt="YouTube Channel">
+      <img src="icons8-youtube.svg" alt="YouTube Channel">
       <div class="info">
         <h3>YouTube</h3>
         <p>Subscribe for free tutorials, deep dives, and livestreams.</p>
@@ -520,7 +523,7 @@
     </div>
 
     <div class="info-card">
-      <img src="icons/icons8-twitch.svg" alt="Twitch Stream">
+      <img src="icons8-twitch.svg" alt="Twitch Stream">
       <div class="info">
         <h3>Twitch</h3>
         <p>Watch us trade live—ask questions and learn in real time.</p>
@@ -530,6 +533,36 @@
   </div>
 </section>
 
+<!-- Features Section -->
+  <section id="features" class="features">
+    <h2>Key Features</h2>
+    <div class="feature-grid">
+      <div class="feature-item">
+        <h3>Peer‑Driven Mentorship & Networking</h3>
+        <p>> Tap into real‑time insights from fellow traders of all skill levels.</p>
+
+        <p>> Share ideas, strategies, and trade setups in dedicated channels or live sessions.</p>
+
+        <p>> Build relationships that can lead to collaborative projects, referral opportunities, or even future partnerships.</p>
+      </div>
+      <div class="feature-item">
+        <h3>Flexibility & Lifestyle Freedom</h3>
+        <p>> Trade whenever and wherever you want—morning coffee, campus break, or late‑night grind.</p>
+
+        <p>> Design your own schedule, balancing studies, side‑hustles, and personal life.</p>
+
+        <p>> Gain financial independence early, funding travel, hobbies, or reinvesting in your goals.</p>
+      </div>
+      <div class="feature-item">
+        <h3>Accelerated Learning & Skill Mastery</h3>
+        <p>> Access curated educational content: webinars, workshops, and real‑time trade debriefs.</p>
+
+        <p>> Get constructive feedback on your journaling, risk management, and strategy execution.</p>
+
+        <p>> Track your progress with community challenges and leaderboard gamification to keep you motivated.</p>
+      </div>
+    </div>
+  </section>
 
   <section id="contact">
     <h2>Contact Us</h2>
@@ -559,10 +592,10 @@
     <div class="footer-container">
       <div class="footer-nav">
         <a href="#home">Home</a>
-        <a href="#free-videos">Free Videos</a>
-        <a href="#premium">Premium</a>
-        <a href="#communities">Communities</a>
-        <a href="#contact">Contact</a>
+        <a href="#free-videos">Futures</a>
+        <a href="#premium">TYD</a>
+        <a href="#communities">Track Us</a>
+        <a href="#contact">Meet Us</a>
       </div>
       <div class="footer-social">
         <a href="https://discord.gg/YourServer">Discord</a>
@@ -570,7 +603,7 @@
         <a href="https://youtube.com/YourChannel">YouTube</a>
         <a href="https://twitch.tv/YourChannel">Twitch</a>
       </div>
-      <div class="footer-copy">&copy; 2025 Young Trader Futures Academy. All rights reserved.</div>
+      <div class="footer-copy">&copy; 2025 YoungDesert. All rights reserved.</div>
     </div>
   </footer>
 
@@ -605,7 +638,7 @@
       <input
         type="hidden"
         name="redirect"
-        value="https://yourdomain.com/thank-you"
+        value="https://youngdesert.com/thank-you"
       />
 
       <!-- the only visible field: -->
@@ -622,42 +655,52 @@
   </div>
 </div>
 
-  <script>
-    const toggle = document.querySelector('.nav-toggle');
-    const menu   = document.querySelector('#nav-list');
 
-    // init ARIA
-    toggle.setAttribute('aria-expanded', 'false');
+<script>
+  const toggle = document.querySelector('.nav-toggle');
+  const menu   = document.querySelector('#nav-list');
 
-    toggle.addEventListener('click', () => {
-      const isOpen = menu.classList.toggle('show');
-      toggle.setAttribute('aria-expanded', isOpen);
-    });
+  // init ARIA
+  toggle.setAttribute('aria-expanded', 'false');
 
-    // close on link click
-    document.querySelectorAll('#nav-list a').forEach(link =>
-      link.addEventListener('click', () => {
-        menu.classList.remove('show');
-        toggle.setAttribute('aria-expanded', 'false');
-      })
-    );
+  toggle.addEventListener('click', () => {
+    const isOpen = menu.classList.toggle('show');
+    toggle.setAttribute('aria-expanded', isOpen);
+  });
 
-    // close on Escape
-    document.addEventListener('keydown', e => {
-      if (e.key === 'Escape' && menu.classList.contains('show')) {
-        menu.classList.remove('show');
-        toggle.setAttribute('aria-expanded', 'false');
-      }
-    });
+  // close on link click
+  document.querySelectorAll('#nav-list a').forEach(link =>
+    link.addEventListener('click', () => {
+      menu.classList.remove('show');
+      toggle.setAttribute('aria-expanded', 'false');
+    })
+  );
 
-    // reset menu on resize
-    window.addEventListener('resize', () => {
-      if (window.innerWidth > 768 && menu.classList.contains('show')) {
-        menu.classList.remove('show');
-        toggle.setAttribute('aria-expanded', 'false');
-      }
-    });
-  </script>
+  // close on Escape
+  document.addEventListener('keydown', e => {
+    if (e.key === 'Escape' && menu.classList.contains('show')) {
+      menu.classList.remove('show');
+      toggle.setAttribute('aria-expanded', 'false');
+    }
+  });
+
+  // reset menu on resize
+  window.addEventListener('resize', () => {
+    if (window.innerWidth > 768 && menu.classList.contains('show')) {
+      menu.classList.remove('show');
+      toggle.setAttribute('aria-expanded', 'false');
+    }
+  });
+
+  // auto-close on scroll
+  window.addEventListener('scroll', () => {
+    if (menu.classList.contains('show')) {
+      menu.classList.remove('show');
+      toggle.setAttribute('aria-expanded', 'false');
+    }
+  });
+</script>
+
 
 <!-- ——— Web3Forms Submission Script ——— -->
 <script>
