--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       </button>
       <ul class="nav-list" id="nav-list">
        
-        <li><a href="landing.html">YoungDesert</a></li>
-        <li><a href="blog.html">LifeStyle</a></li>
+        <li><a href="landing.html">Young</a></li>
+        <li><a href="blog.html">Desert</a></li>
         
         <li><a href="yd.html">YD</a></li>
       </ul>
