--- a/blog.html
+++ b/blog.html
@@ -76,10 +76,10 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="hero" style="background-image:url('hero-bg.jpg')">
+  <section class="hero" style="background-image:url('images/8.jpg')">
     <div class="hero-content">
-      <h1>Welcome to MyLifeStyle</h1>
-      <p>Insights, tutorials, and stories — all in one place.</p>
+      <h1>Whatch What's New!!</h1>
+      <p>Insights, tutorials, and stories about Business and Technology — all in one place.</p>
       <a href="#posts" class="btn">Browse Posts</a>
     </div>
   </section>
