--- a/blog.html
+++ b/blog.html
@@ -124,6 +124,7 @@
     <p>&copy; 2025 MyBlog. All rights reserved.</p>
   </footer>
 
+  <script src="script.js"></script>
   <!-- Mobile Nav Script -->
   <script>
     const toggle = document.getElementById('nav-toggle');
