--- a/blog.html
+++ b/blog.html
@@ -76,9 +76,9 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="hero" style="background-image:url('images/8.jpg')">
+  <section class="hero" style="background-image:url('images/3.jpg')">
     <div class="hero-content">
-      <h1>Whatch What's New!!</h1>
+      <h1>What's New!!</h1>
       <p>Insights, tutorials, and stories about Business and Technology — all in one place.</p>
       <a href="#posts" class="btn">Browse Posts</a>
     </div>
@@ -124,7 +124,7 @@
     <p>&copy; 2025 MyBlog. All rights reserved.</p>
   </footer>
 
-  <script src="script.js"></script>
+ 
   <!-- Mobile Nav Script -->
   <script>
     const toggle = document.getElementById('nav-toggle');
