--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@
   <!-- Header & Nav -->
   <header class="header">
     <nav class="nav">
-      <a href="index.html" class="logo">MyLifeStyle</a>
+      <a href="index.html" class="logo">TheDesert</a>
       <button class="nav-toggle" id="nav-toggle">
         <span class="hamburger"></span>
       </button>
@@ -76,7 +76,7 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="hero" style="background-image:url('images/3.jpg')">
+  <section class="hero" style="background-image:url('images/03.jpg')">
     <div class="hero-content">
       <h1>What's New!!</h1>
       <p>Insights, tutorials, and stories about Business and Technology — all in one place.</p>
