--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
   <div id="pdfModal" class="modal">
     <div class="modal-content">
       <span class="close-button">&times;</span>
-      <h2>Get Your Free PDF</h2>
+      <h2>Here is your Start Guide</h2>
+      <p>Know more about Top 5 Incomes Now!</p>
       <form id="subscribe-form">
         <!-- replace with your Web3Forms access key if you want real integration -->
         <input type="hidden" name="access_key" value="3a7e0042-9451-4644-bf29-1d9806ff8254" />
@@ -85,11 +86,11 @@
           placeholder="Your email address"
           required
         />
-        <button type="submit" class="btn">Subscribe & Download</button>
+        <button type="submit" class="btn">Download</button>
       </form>
       <div id="download-section" style="display: none;">
         <p>Thanks for subscribing!  
-           <a id="download-link" href="pdf/A-Complete-Guide-to-ES-Mini-Futures-for-Beginners.pdf" download>
+           <a id="download-link" href="pdf/Top5Incomes.pdf" download>
              Click here to download your PDF
            </a>
         </p>
